@@ -1,6 +1,6 @@
 *********************************
 * DockingFrames                 *
-* Version: 1.0.8                *
+* Version: 1.1.1                *
 *********************************
 
 ********************************
@@ -10,12 +10,12 @@
 The easiest way to write new applications is to use the common-project. For
 that you should perform these steps:
 
-- include "bin/dockingFramesCore.jar" into your class-path.
-- include "bin/dockingFramesCommon.jar" into your class-path.
+- include "bin/docking-frames-core.jar" into your class-path.
+- include "bin/docking-frames-common.jar" into your class-path.
 	That will give you access to the core and the common library
 
-- include "src/dockingFramesCore" into your source-path.
-- include "src/dockingFramesCommon" into your source-path.
+- include "src/docking-frames-core" into your source-path.
+- include "src/docking-frames-common" into your source-path.
 	That will give you access to the source of the libraries. This step
 	is not really necessary, but the source often helps understanding 
 	new methods
@@ -24,8 +24,11 @@ that you should perform these steps:
 	This is a document that gives an overview of the classes in the common 
 	project
 	
-- bookmark "doc/dockingFramesCommon/index.html"
+- bookmark "doc/docking-frames-common/index.html"
 	The API documentation of the common and the core project.
+
+- start the tutorial "tutorial.sh" or "tutorial.bat"
+    A little collection of examples showing how to work with the framework.
 
 ***********************************
 * 2 * Using the core library only *
@@ -33,12 +36,12 @@ that you should perform these steps:
 
 If you want to use only the core library:
 
-- include "bin/dockingFramesCore.jar" into your class-path.
-- include "src/dockingFramesCore" into your source-path.	
+- include "bin/docking-frames-core.jar" into your class-path.
+- include "src/docking-frames-core" into your source-path.	
 - read "core.pdf"
 	This is a document that gives an overview of the classes in the core library
 	
-- bookmark "doc/dockingFramesCore/index.html"
+- bookmark "doc/docking-frames-core/index.html"
 	The API documentation of the common and the core project.
 	
 *************************
@@ -49,87 +52,88 @@ There are a number of different projects in this archive, this is a list of
 them.
 
 DockingFrames Core - The core library of DockingFrames.
-	Path: "dockingFramesCore.jar"
+	Path: "docking-frames-core.jar"
 	Executable: no
 	Dependencies: none
 
 DockingFrames Common - Layer above the core, adds new features
-	Path: "dockingFramesCommon.jar"
+	Path: "docking-frames-common.jar"
 	Executable: no
 	Dependencies: 
-		dockingFramesCore
+		docking-frames-core
 
 Tutorial - A set of very small classes containing some basic code
-	Path: "tutorial.jar"
+	Path: "docking-frames-demo-tutorial.jar"
 	Executable: yes
 	Dependencies: 
-		dockingFramesCore
-		dockingFramesCommon
+		docking-frames-core
+		docking-frames-common
+		docking-frames-ext-toolbar-tutorial (optional)
 
 Interfaces - Interfaces needed for the demonstration-application
-	Path: "interfaces.jar"
+	Path: "docking-frames-demo-app-ice.jar"
 	Executable: no
-	Dependencies: dockingFramesCommon
+	Dependencies: docking-frames-common
 
 Demonstration - a client starting other applications, shows some demonstrations
-	Path: "demonstration.jar"
+	Path: "docking-frames-demo-app.jar"
 	Executable: yes
 	Dependencies:
-		dockingFramesCore
-		dockingFramesCommon
-		interfaces
-		notes
-		help
-		chess
-		paint
-		sizeAndColor
-		commonLayouts
+		docking-frames-core
+		docking-frames-common
+		docking-frames-demo-app-ice
+		docking-frames-demo-notes
+		docking-frames-demo-help
+		docking-frames-demo-chess
+		docking-frames-demo-paint
+		docking-frames-demo-size-and-color
+		docking-frames-demo-layout
 
 Notes - an application showing some notes
-	Path: "notes.jar"
+	Path: "docking-frames-demo-notes.jar"
 	Executable: yes
 	Dependencies:
-		dockingFramesCore
-		dockingFramesCommon
-		interfaces
+		docking-frames-core
+		docking-frames-common
+		docking-frames-demo-app-ice
 
 Help - an application that displays JavaDoc
-	Path: "help.jar"
+	Path: "docking-frames-demo-help.jar"
 	Executable: yes
 	Dependencies: 
-		dockingFramesCore
-		dockingFramesCommon
-		interfaces
+		docking-frames-core
+		docking-frames-common
+		docking-frames-demo-app-ice
 		For compilation only:[JDK]/lib/tools.jar
 
 Chess - a chess application for two players
-	Path: "chess.jar"
+	Path: "docking-frames-demo-chess.jar"
 	Executable: yes
 	Dependencies:
-		dockingFramesCore
-		dockingFramesCommon
-		interfaces
+		docking-frames-core
+		docking-frames-common
+		docking-frames-demo-app-ice
 
 Paint - application to paint images
-	Path: "paint.jar"
+	Path: "docking-frames-demo-paint.jar"
 	Executable: yes
 	Dependencies:
-		dockingFramesCore
-		dockingFramesCommon
-		interfaces
+		docking-frames-core
+		docking-frames-common
+		docking-frames-demo-app-ice
 		
 SizeAndColor - application to demonstrate new features of version 1.0.3
-	Path: "sizeAndColor.jar"
+	Path: "docking-frames-demo-size-and-color.jar"
 	Executable: yes
 	Dependencies:
-		dockingFramesCore
-		dockingFramesCommon
-		interfaces
+		docking-frames-core
+		docking-frames-common
+		docking-frames-demo-app-ice
 		
 Common Layouts - application to test the layout storage capabilities of common
-	Path: "commonLayouts.jar"
+	Path: "docking-frames-demo-layout.jar"
 	Executable: yes
 	Dependencies:
-		dockingFramesCore
-		dockingFramesCommon
-		interfaces 
+		docking-frames-core
+		docking-frames-common
+		docking-frames-demo-app-ice 
